vlib/v/checker/tests/method_generic_infer_err.vv
struct Data {}

fn (_ Data) func<T>() T {
	return T{}
}

fn main() {
	data := Data{}
	data.func()
}
